score ilości dróg

--- a/index.html
+++ b/index.html
@@ -104,6 +104,29 @@
                             <span>Słaba (intermediate, bad, very_bad, horrible, very_horrible, impassable)</span>
                         </div>
                     </div>
+                    
+                    <!-- Statistics -->
+                    <div class="road-stats" id="road-stats" style="display: none;">
+                        <h4>Statystyki jakości dróg</h4>
+                        <div class="stat-main">
+                            <span class="stat-label">Drogi bez oceny jakości:</span>
+                            <span class="stat-value" id="unknown-roads">-</span>
+                        </div>
+                        <div class="stat-breakdown">
+                            <div class="stat-item">
+                                <div class="legend-line excellent"></div>
+                                <span class="stat-number" id="excellent-percent">-</span>
+                            </div>
+                            <div class="stat-item">
+                                <div class="legend-line good"></div>
+                                <span class="stat-number" id="good-percent">-</span>
+                            </div>
+                            <div class="stat-item">
+                                <div class="legend-line poor"></div>
+                                <span class="stat-number" id="poor-percent">-</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
