--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="legend-item">
                             <div class="legend-line poor"></div>
-                            <span>Słaba (intermediate, bad, very_bad, horrible, very_horrible, impassable)</span>
+                            <span>Słaba</span>
                         </div>
                     </div>
                     
