kafelki dla województw

--- a/index.html
+++ b/index.html
@@ -161,9 +161,71 @@
                                     Pomóż innym rowerzystom unikać wybojów i znajdować najlepsze trasy!
                                 </p>
                                 <div class="cta-stats">
-                                    <div class="stat-highlight">
-                                        <span class="stat-number">74%</span>
-                                        <span class="stat-label">dróg bez oceny jakości</span>
+                                    <div class="voivodeship-grid">
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">82,4%</span>
+                                            <span class="stat-label">Podlaskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">82,9%</span>
+                                            <span class="stat-label">Mazowieckie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">84,2%</span>
+                                            <span class="stat-label">Lubelskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">86,5%</span>
+                                            <span class="stat-label">Pomorskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">87,4%</span>
+                                            <span class="stat-label">Kujawsko-pomorskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">88,4%</span>
+                                            <span class="stat-label">Podkarpackie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">88,6%</span>
+                                            <span class="stat-label">Małopolskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">89,0%</span>
+                                            <span class="stat-label">Śląskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">89,2%</span>
+                                            <span class="stat-label">Dolnośląskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">89,5%</span>
+                                            <span class="stat-label">Warmińsko-mazurskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">90,8%</span>
+                                            <span class="stat-label">Opolskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">90,9%</span>
+                                            <span class="stat-label">Zachodniopomorskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">92,6%</span>
+                                            <span class="stat-label">Świętokrzyskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">92,6%</span>
+                                            <span class="stat-label">Wielkopolskie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">93,4%</span>
+                                            <span class="stat-label">Łódzkie</span>
+                                        </div>
+                                        <div class="stat-highlight">
+                                            <span class="stat-number">95,8%</span>
+                                            <span class="stat-label">Lubuskie</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
