dodatkowy test o zawartości mapy

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
                                 <h2>Co pokazuje mapa?</h2>
                             </div>
                             
+                            <!-- Road Types Info -->
+                            <div class="road-types-info">
+                                <p>
+                                    Mapa prezentuje <strong>drogi trzeciorzędne i niesklasyfikowane</strong> — 
+                                    te o niewielkim natężeniu ruchu, idealne dla spokojnych przejażdżek rowerowych 
+                                    z dala od głównych arterii komunikacyjnych.
+                                </p>
+                            </div>
+                            
                             <!-- Map and Legend Layout -->
                             <div class="map-legend-layout">
                                 <!-- Map Example -->
