--- a/index.html
+++ b/index.html
@@ -40,18 +40,20 @@
                         <!-- Hero Section -->
                         <section class="hero-section">
                             <div class="hero-content">
-                                <h1 class="hero-title">Asphalt Premium</h1>
+                                <div class="hero-logo">
+                                    <img src="assets/logo.jpg" alt="Asphalt Premium Logo" class="hero-logo-image" />
+                                </div>
                                 <p class="hero-subtitle">Znajdź najlepsze drogi dla swojej przygody na rowerze</p>
                                 <div class="hero-features">
-                                    <div class="feature-badge">
+                                    <div class="feature-chip">
                                         <i class="fas fa-bicycle"></i>
                                         <span>Dla cyklistów</span>
                                     </div>
-                                    <div class="feature-badge">
+                                    <div class="feature-chip">
                                         <i class="fas fa-map-marked-alt"></i>
                                         <span>Jakość dróg</span>
                                     </div>
-                                    <div class="feature-badge">
+                                    <div class="feature-chip">
                                         <i class="fas fa-database"></i>
                                         <span>OpenStreetMap</span>
                                     </div>
