wyróżnienie zaznaczonej drogi i link do edycji w OSM

--- a/index.html
+++ b/index.html
@@ -535,6 +535,20 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Road Info Sidebar -->
+            <div class="road-info-sidebar" id="road-info-sidebar" style="display: none;">
+                <div class="road-info-header">
+                    <h3>Informacje o drodze</h3>
+                    <button class="road-info-close" id="road-info-close">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+                
+                <div class="road-info-content" id="road-info-content">
+                    <!-- Content will be filled dynamically -->
+                </div>
+            </div>
         </div>
 
     </main>
