--- a/index.html
+++ b/index.html
@@ -560,11 +560,33 @@
         <div id="modalCaption"></div>
     </div>
 
+    <!-- Confirmation Modal -->
+    <div id="confirmationModal" class="confirmation-modal" style="display: none;">
+        <div class="confirmation-modal-overlay"></div>
+        <div class="confirmation-modal-content">
+            <div class="confirmation-modal-header">
+                <h3 id="confirmationModalTitle">Potwierdź akcję</h3>
+                <button class="confirmation-modal-close" id="confirmationModalClose">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="confirmation-modal-body" id="confirmationModalBody">
+                <!-- Content will be inserted dynamically -->
+            </div>
+            <div class="confirmation-modal-footer">
+                <button class="btn btn-secondary" id="confirmationModalCancel">Anuluj</button>
+                <button class="btn btn-primary" id="confirmationModalConfirm">Potwierdź</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/config.js"></script>
     <script src="js/cache.js"></script>
     <script src="js/overpass.js"></script>
+    <script src="js/oauth.js"></script>
+    <script src="js/osm-api.js"></script>
     <script src="js/map.js"></script>
     <script src="js/app.js"></script>
     <script src="js/image-modal.js"></script>
