przeniesienie logowania do toolbara

--- a/index.html
+++ b/index.html
@@ -23,8 +23,29 @@
         </div>
         
         <nav class="toolbar-nav">
-            <button class="nav-btn active" data-page="map">Mapa</button>
-            <button class="nav-btn" data-page="about">O projekcie</button>
+            <!-- Login/User Section -->
+            <div class="toolbar-auth-section">
+                <button class="btn-toolbar-login" id="toolbar-login-btn" style="display: none;">
+                    <i class="fas fa-sign-in-alt"></i>
+                    <span>Zaloguj do OSM</span>
+                </button>
+                <div class="toolbar-user-section" id="toolbar-user-section" style="display: none;">
+                    <div class="toolbar-user-info" id="toolbar-user-info">
+                        <i class="fas fa-user-circle"></i>
+                        <span class="user-name" id="toolbar-user-name">Zalogowany</span>
+                    </div>
+                    <button class="btn-toolbar-logout" id="toolbar-logout-btn" title="Wyloguj się">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Wyloguj</span>
+                    </button>
+                </div>
+            </div>
+            
+            <!-- Navigation Buttons -->
+            <div class="toolbar-nav-buttons">
+                <button class="nav-btn active" data-page="map">Mapa</button>
+                <button class="nav-btn" data-page="about">O projekcie</button>
+            </div>
         </nav>
     </header>
 
