--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <!-- Floating Sidebar -->
             <div class="sidebar" id="sidebar">
                 <div class="sidebar-header">
-                    <h3>Kontrola mapy</h3>
+                    <h3>Filtry mapy</h3>
                     <button class="sidebar-toggle" id="sidebar-toggle">
                         <span class="toggle-icon">←</span>
                     </button>
