change to Asfalt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asphalt Premium - Jakość dróg w Polsce</title>
+    <title>Asfalt Premium - Jakość dróg w Polsce</title>
     <link rel="icon" type="image/svg+xml" href="favicon.png">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components.css">
@@ -22,7 +22,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="logo">
-                <img src="assets/logo.jpg" alt="Asphalt Premium Logo" class="logo-image" />
+                <img src="assets/logo.jpg" alt="Asfalt Premium Logo" class="logo-image" />
             </div>
         </div>
         
@@ -84,7 +84,7 @@
                         <section class="hero-section">
                             <div class="hero-content">
                                 <div class="hero-logo">
-                                    <img src="assets/logo.jpg" alt="Asphalt Premium Logo" class="hero-logo-image" />
+                                    <img src="assets/logo.jpg" alt="Asfalt Premium Logo" class="hero-logo-image" />
                                 </div>
                                 <p class="hero-subtitle">Znajdź najlepsze drogi dla swojej przygody na rowerze</p>
                                 <div class="hero-features">
@@ -113,7 +113,7 @@
                             <p class="mission-text">
                                 Naszym celem jest <strong>uzupełnienie danych o jakości dróg w OpenStreetMap</strong>, 
                                 co pozwoli wszystkim cyklistom na planowanie lepszych, bardziej komfortowych tras. 
-                                Asphalt Premium pokazuje gdzie można znaleźć dobry asfalt na mało uczęszczanych drogach 
+                                Asfalt Premium pokazuje gdzie można znaleźć dobry asfalt na mało uczęszczanych drogach 
                                 — idealnych do spokojnych przejażdżek z dala od ruchu.
                             </p>
                         </section>
@@ -305,7 +305,7 @@
                                             <h4>Gotowe! Droga została zaktualizowana</h4>
                                             <p>
                                                 Twoja ocena zostanie zapisana w OpenStreetMap i wkrótce pojawi się na mapie 
-                                                Asphalt Premium. Gratulacje, właśnie pomogłeś innym cyklistom!
+                                                Asfalt Premium. Gratulacje, właśnie pomogłeś innym cyklistom!
                                             </p>
                                             <div class="success-message">
                                                 <i class="fas fa-check-circle"></i>
